--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
       "description": "Duplicate tab"
     },
     "pin-tab": {
-      "suggested_key": "Alt+Shift+Z",
+      "suggested_key": "Alt+Shift+P",
       "description": "Pin tab"
     },
     "go-incognito": {
