add pinned tabs support to rearrange tabs shortcut

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
   "permissions": [
     "tabs",
     "storage",
-    "tabGroups"
+    "tabGroups",
+    "activeTab"
   ],
   "commands": {
     "duplicate-tab": {
