fix incognito shortcut description

--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
     },
     "go-incognito": {
       "suggested_key": "Alt+Shift+N",
-      "description": "Open tab(s) in incognito"
+      "description": "Open the current tab(s) in incognito"
     },
     "open-tab-near": {
       "description": "Open tab near current and in same group"
