add jump to last tap shortcut

--- a/manifest.json
+++ b/manifest.json
@@ -53,6 +53,9 @@
     },
     "toggle-collapse-groups": {
       "description": "Toggle collapse all tab groups"
+    },
+    "switch-to-last-tab": {
+      "description": "Switch to the last active tab"
     }
   },
   "background": {
