add move all groups to front or back shortcut

--- a/manifest.json
+++ b/manifest.json
@@ -63,6 +63,9 @@
     },
     "move-tabs-to-window": {
       "description": "Move highlighted tab(s) to different window (cycle)"
+    },
+    "move-all-groups": {
+      "description": "Move all groups to front or back"
     }
   },
   "action": {
